--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,7 @@
     color: #590C1D;
     padding-top: 10%;
     font-size: 40px;
+    text-align: center;
 }
 
 .opcoes{
@@ -136,19 +137,48 @@
     border-color: #7A4018;
     border-radius: 15px;
     background-color: transparent;
-}
-.linkbotao{
-    display: flex;
     color: #7A4018;
-    padding: 15px 34px;
-    align-items: center;
+    padding: 15px 34px;    
     font-size: 32px;
     line-height: 36px;
     font-weight: bold;
-    text-decoration: none;
 }
-.linkbotao:hover{
+.botao:hover{
     color: white;
     background-color: #1E4773;
-    border: none;
+    border-color: #1E4773;
+}
+
+.sessao.musicaSugerida{    
+    height: 80%;
+    width: 80%;    
+}
+
+.sessao.musicaSugerida h1{           
+    padding: 0;      
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.geral.musicaSugerida {   
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   
+   height: auto;
+   
+}
+.musica-imagem{
+    width: 50%;
+}
+.musica-titulo{
+    font-size: 48px;
+    margin-top: 10px;
+}
+
+.musica-link{
+    font-size: 32px;
 }
