--- a/public/css/style.css
+++ b/public/css/style.css
@@ -166,8 +166,8 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   width: 100%;
-   
+   width: auto;
+   height: 100%;
    height: auto;
    
 }
